--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,20 +1,16 @@
-name: Publish Master
+name: Publish
 on: 
   push:
     branches:
-    - master
+    - main
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - name: Build the Docker image
-      run: docker build . -t lgohr/gron-docker:${{ github.sha }} -t lgohr/gron-docker:latest
-    - name: Login to Registry
-      run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-    - name: Push to Registry
-      run: |
+    - uses: actions/checkout@v3
+    - run: docker build . -t lgohr/gron-docker:${{ github.sha }} -t lgohr/gron-docker:latest
+    - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+    - run: |
         docker push lgohr/gron-docker:${{ github.sha }}
         docker push lgohr/gron-docker:latest
-    - name: Logout
-      run: docker logout
+    - run: docker logout
